# borg-drone

./: Makefile  README.md  config-schema.json  example.yml  pyproject.toml
.builds/: ci-tests.yml
borg_drone/: __init__.py  __main__.py  borg_commands.py  command.py  config.py  example.yml  types.py  util.py
completions/: _borg-drone.bash  _borg-drone.zsh
tests/: conftest.py  test_commands.py  test_config.py  test_config_validation.py
